# Saas-Project

./: .gitignore  README.md  info.txt
backend/: Cargo.toml  info.txt
backend/config/: config.json
backend/src/: abc.rs  lib.rs  main.rs
backend/src/configration/: mod.rs  settings.rs
backend/src/controllers/: genai_controller.rs  mod.rs  subscription_controller.rs  user_controller.rs
backend/src/middleware/: auth.rs  cors.rs
backend/src/models/: mod.rs  subscription_model.rs  user_model.rs
backend/src/routes/: genai_routes.rs  mod.rs  subscription_routes.rs  user_route.rs
backend/src/utils/: db.rs  generate_token.rs  logger.rs  mod.rs  set_env.rs
frontend/: index.html  package-lock.json  package.json  test.js  vite.config.js
frontend/public/: LoginPage.jsx
frontend/src/: App.jsx
frontend/src/api-service/: ApiRequest.jsx
frontend/src/common-comp/: FailurePage.jsx  SuccessPage.jsx  Verify.jsx
frontend/src/contexts/: UsageContext.jsx  UserContext.jsx
frontend/src/marketing-page/: Blog.jsx  MarketingPage.jsx  TemplateFrame.jsx
frontend/src/marketing-page/components/: AppAppBar.jsx  Features.jsx  Hero.jsx  Latest.jsx  MainContent.jsx  Pricing.jsx  Testimonials.jsx
frontend/src/product-page/: ProductPage.jsx  TemplateFrame.jsx
frontend/src/product-page/components/: AccountSlots.jsx  CardAlert.jsx  MiniDrawer.jsx  NotfoundPage.jsx  TranslationPlatform.jsx  UsageTracker.jsx  UserProfile.jsx
frontend/src/product-page/theme/: getProductTheme.jsx
frontend/src/sign-in-side/: SignInCard.jsx  SignInSide.jsx  SignUpCard.jsx  TemplateFrame.jsx
(+1 files in other folders)
