[package]
name = "backend"
version = "0.1.0"
edition = "2021"


# [[bin]]           # cargo run  --bin  abc
# name = "abc"
# path = "src/abc.rs"

[dependencies]
axum = {version ="0.7.4" , features = ["multipart"]}
axum-extra = { version = "0.7.2", features = ["cookie"] }
axum-server = "0.6.0"
# axum-macros = "0.4.2"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
# dotenv = "0.15"
mongodb = { version = "3.0.1", features = ["sync"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower = { version = "0.4", features = ["full"] }
jsonwebtoken = "9.3.0"                                # For JWT handling
# multipart = "0.17.1"                                  # For handling multipart forms
chrono = { version = "0.4.38", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.4"
log4rs = "1.3.0"
log = "0.4.21"
config = "0.13.2" #for config
reqwest = { version = "0.11.24", features = ["json"] }
validator = "0.15"
bcrypt = "0.9"
hyper = "1.4.1"
uuid = "1.10.0"
futures-util = "0.3"
async-stripe = { version = "0.38.1", features = ["runtime-tokio-hyper"] }
cookie = "0.18.0"
bson = "2.13.0"
sha2 = "0.10.8"
hex = "0.4.3"
cloudinary = "0.5.2"
regex = "1.10.6"
genai = "0.1.10"
dotenv = "0.15.0"